config/samples/supporting-objects/app_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-web-service
  # TODO: Kustomize prefixes the system namespace with 'cf-crd-explorations-'
  # We should figure out how to ensure this is prefixed automatically.
  namespace: default
  labels:
    cloudfoundry.org/guid: my-app-web
spec:
  selector:
    cloudfoundry.org/guid: my-app-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  # Type LoadBalancer works for most IaaS. This will not work for Kind/Minikube and should be changed to NodePort.
  type: LoadBalancer
  # If you are using a static or pre-allocated IP, uncomment below and provide your IP.
  # loadBalancerIP: INSERT_LB_IP
